// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`invalid-json.md - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- #10333 -->
\`\`\`json
packages\\the-hub\\cypress\\fixtures\\gridConfiguration.json
\`\`\`
=====================================output=====================================
<!-- #10333 -->

\`\`\`json
packages\\the-hub\\cypress\\fixtures\\gridConfiguration.json
\`\`\`

================================================================================
`;

exports[`jsonc.md - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
\`\`\`jsonc
   // comment
{
     "foo"   :    "bar"
}
\`\`\`

=====================================output=====================================
\`\`\`jsonc
// comment
{
  "foo": "bar",
}
\`\`\`

================================================================================
`;

exports[`trailing_comma.md - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
\`\`\`json
{
  "foo": "bar"
}
\`\`\`

=====================================output=====================================
\`\`\`json
{
  "foo": "bar"
}
\`\`\`

================================================================================
`;
